reordered messed up vendor prefixes

--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -42,10 +42,10 @@
 }
 .icon-nudge {
 	-webkit-transition: margin-left 0.3s;
-	transition: margin-left 0.3s;
 	-moz-transition: margin-left 0.3s;
 	-o-transition: margin-left 0.3s;
 	-ms-transition: margin-left 0.3s;
+	transition: margin-left 0.3s;
 }
 .plug-rotate, .icon-rotate {
 	-webkit-transition-duration: 0.5s;
@@ -61,11 +61,13 @@
 	-webkit-transform:rotate(45deg);
     -moz-transform:rotate(45deg);
     -o-transform:rotate(45deg);
+    transform:rotate(45deg);
 }
 .icon-rotated {
 	-webkit-transform:rotate(180deg);
     -moz-transform:rotate(180deg);
     -o-transform:rotate(180deg);
+    transform:rotate(180deg);
 }
 .scroll-down-animation {
 	-webkit-animation: scrolldown 0.8s ease-in-out infinite;
@@ -76,8 +78,8 @@
 }
 .block-button-transition {
 	-webkit-transition: background 0.2s, border-color 0.2s, color 0.2s;
-	transition: background 0.2s, border-color 0.2s, color 0.2s;
 	-moz-transition: background 0.2s, border-color 0.2s, color 0.2s;
 	-o-transition: background 0.2s, border-color 0.2s, color 0.2s;
 	-ms-transition: background 0.2s, border-color 0.2s, color 0.2s;
+	transition: background 0.2s, border-color 0.2s, color 0.2s;
 }
