--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -348,12 +348,12 @@ div.wk-panel-items {
         z-index: 0;
         opacity: 0;
         -webkit-transform: translateY(0);
-        -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
         -moz-transform: translateY(0);
-        -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
-        transform: translateY(0);
-        transition: transform 0.5s ease-in-out, opacity 0s linear 0.5s;
         -ms-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
+        -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0s linear 0.5s;
+        transition: transform 0.5s ease-in-out, opacity 0s linear 0.5s;
         & > div {
             width: 60%;
             margin: 0 auto;
@@ -409,22 +409,23 @@ div.wk-panel-items {
         z-index: 1000;
         opacity: 1;
         -webkit-transform: translateY(-50%);
-        -webkit-transition: -webkit-transform 0.5s ease-in-out;
         -moz-transform: translateY(-50%);
-        -moz-transition: -moz-transform 0.5s ease-in-out;
-        transform: translateY(-50%);
-        transition: transform 0.5s ease-in-out;
         -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        -webkit-transition: -webkit-transform 0.5s ease-in-out;
+        -moz-transition: -moz-transform 0.5s ease-in-out;
+        transition: transform 0.5s ease-in-out;
     }
     & > div.wk-hide-current-work {
         opacity: 0;
-        -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
         -webkit-transform: translateY(-100%) scale(0.5);
-        -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
         -moz-transform: translateY(-100%) scale(0.5);
-        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+        -ms-transform: translateY(-100%) scale(0.5);
         transform: translateY(-100%) scale(0.5);
         -ms-transform: translateY(-100%) scale(0.5);
+        -webkit-transition: -webkit-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;        
+        -moz-transition: -moz-transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
         z-index: 0;
     }
 }
