--- a/app/less/pages/showcase/showcase-case-studies.less
+++ b/app/less/pages/showcase/showcase-case-studies.less
@@ -662,18 +662,18 @@ div.cs-panel-items {
     nav {
         position: absolute;
         z-index: 9999;
-        width: 10rem;
+        width: 4rem;
         height: 3rem;
-        left: 50%;
-        margin-left: -5rem;
-        top: -3rem;
-        background: white;
-        border: 2px solid #e74c3c;
+        //left: 50%;
+        right:0;
+        //margin-left: -5rem;
+        background: transparent;
+        //border: 2px solid #e74c3c;
         opacity: 0;
-        -webkit-transition: opacity 0.2s ease-in-out 0.5s;
-        -moz-transition: opacity 0.2s ease-in-out 0.5s;
-        transition: opacity 0.2s ease-in-out 0.5s;
-        padding: 1rem;
+        -webkit-transition: opacity 0.2s ease-in-out 0.2s;
+        -moz-transition: opacity 0.2s ease-in-out 0.2s;
+        transition: opacity 0.2s ease-in-out 0.2s;
+        padding: 0.5rem;
         display: none;
         span {
             display: block;
@@ -709,7 +709,7 @@ div.cs-panel-items {
 div.cs-panel-items.cs-panel-items-show {
     nav {
         opacity: 1;
-        top: -3rem;
+        top: -90%;
     }
 }
 .cs-main.cs-expand-item &>section:not(.cs-expand),.cs-main.cs-expand-item &>section.cs-scale-down {
