--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3038,10 +3038,11 @@ section.team .team-member-overlay p:nth-child(2) {
 }
 section.team .lightbox {
   position: fixed;
-  background: #e6e6e6;
+  background: #fff;
   padding: 2rem;
   border-radius: 4px;
   color: #646464;
+  border: 1px solid lightgrey;
   display: none;
   -webkit-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: -2px 5px 10px rgba(0, 0, 0, 0.2);
@@ -3081,6 +3082,15 @@ section.team .lightbox .icon-exit {
 }
 section.team .lightbox .icon-exit:hover {
   color: #c92e1e;
+}
+.lightbox-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: none;
 }
 @media screen and (min-width: 40rem) {
   section.about-intro {
