--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1987,41 +1987,40 @@ footer .flow-opposite {
     background: rgba(0, 0, 0, 0.1);
   }
 }
-@media screen and (min-width: 30rem) {
-  
-}
-@media screen and (max-width: 48rem) {
-  nav {
-    height: auto;
-  }
-  nav ul {
-    width: 100vw;
-    display: block;
-    height: auto;
-  }
-  nav li {
-    width: 33.3%;
-    float: left;
-    position: relative;
-    border-right: 0;
-  }
-  nav li a {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    border-right: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 0;
-  }
-  nav a {
-    width: 100%;
-  }
-}
-@media only screen and (max-width: 30rem) {
+/*@media screen and (max-width: 48rem) {
+	nav {
+		height:auto;
+		ul {
+			width: 100vw;
+	  		display: block;
+	  		height: auto;
+		}
+		li {
+			width: 33.3%;
+  			float: left;
+  			position: relative;
+  			border-right:0;
+  			
+  			a {
+  				border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+				border-right: 1px solid rgba(255, 255, 255, 0.1);
+				padding:0;
+  			}
+		}
+		a {
+		  	width: 100%;
+		}
+	}
+}*/
+@media only screen and (max-width: 48rem) {
   nav {
     border-bottom: 0;
-    background: #3b3d4a;
+    background: transparent;
   }
   nav ul {
     display: none;
     height: auto;
+    background: #3b3d4a;
   }
   nav li {
     float: none;
@@ -2033,7 +2032,7 @@ footer .flow-opposite {
     border-right: 0;
   }
   nav li:last-child a {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
   nav li:first-child a {
     margin-top: 1rem;
@@ -2044,6 +2043,7 @@ footer .flow-opposite {
   }
   nav #nav-toggle {
     display: block;
+    width: 100%;
     position: fixed;
   }
   nav #nav-toggle i {
@@ -3090,6 +3090,7 @@ section.team .lightbox .icon-exit:hover {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
+  z-index: 100;
   display: none;
 }
 @media screen and (min-width: 40rem) {
