don't display social links with empty hrefs

--- a/app/less/pages/about/about-team.less
+++ b/app/less/pages/about/about-team.less
@@ -141,6 +141,9 @@ section.team {
 		.social-links {
 			text-align:right;
 			color:@secondary-color;
+			a[href="javascript:void(0)"] {
+				display:none;
+			}
 			i {
 				font-size:2em;
 				padding-left:1rem;
