added second tagline

--- a/app/less/pages/home/home-header.less
+++ b/app/less/pages/home/home-header.less
@@ -67,6 +67,11 @@ header.home-header {
 			margin-top:-1.2rem;
 			margin-left:8rem;
 		}
+		p.sub-tagline {
+			font-family:@primary-font-reg;
+			font-size:0.7em;
+			margin-top:2.5rem;
+		}
 	}
 }
 .plug-and-socket {
