new favicon, apple touch icons etc

--- a/app/less/partials/media-queries-navbar.less
+++ b/app/less/partials/media-queries-navbar.less
@@ -116,7 +116,7 @@
 			text-align: left;
 		  	text-indent: 25px;
 		}
-		#home-icon {
+		#home-icon, .home-icon {
 			display:none;
 		}
 		#nav-toggle {
