full height info panel for smaller screens

--- a/app/less/pages/showcase/media-queries-showcase-work.less
+++ b/app/less/pages/showcase/media-queries-showcase-work.less
@@ -77,6 +77,10 @@
 	        font-size:1em;
 	    }
 	}
+	div.wk-panel-items > div.wk-show-work {
+		top:40px;
+		background: rgba(255, 255, 255, 1);
+	}
 }
 
 @media screen and (max-width: 30rem) {
