changed viewport meta tag

--- a/app/less/pages/showcase/media-queries-showcase-work.less
+++ b/app/less/pages/showcase/media-queries-showcase-work.less
@@ -78,7 +78,7 @@
 	    }
 	}
 	div.wk-panel-items > div.wk-show-work {
-		top:40px;
+		top:40%;
 		background: rgba(255, 255, 255, 1);
 	}
 }
@@ -111,6 +111,10 @@
         -moz-transition: -moz-transform 0.5s ease-in-out;
         transition: transform 0.5s ease-in-out;
     }
+    div.wk-panel-items > div.wk-show-work {
+		top:40px;
+		background: rgba(255, 255, 255, 1);
+	}
 }
 
 @media screen and (max-width: 30rem) {
