--- a/app/less/pages/home/home-header.less
+++ b/app/less/pages/home/home-header.less
@@ -99,6 +99,7 @@ header.home-header {
 	left:0;
 	background-color:rgba(255, 255, 255, 0.2);
 	height:1.2rem;
+	margin-bottom:0 !important;
 	-webkit-transition: height 0.3s;
 	-moz-transition: height 0.3s;
 	-o-transition: height 0.3s;
