--- a/app/less/pages/about/about-header.less
+++ b/app/less/pages/about/about-header.less
@@ -5,6 +5,9 @@ header.about-header {
 	background-position:center;
 	width:100%;
 	height:100vh;
+	.no-cssvhunit & {
+		height:595px;
+	}
 	.about-header-bg {
 		position:absolute;
 		top:0;
@@ -12,6 +15,9 @@ header.about-header {
 		width:100%;
 		background:black;
 		opacity:0.4;
+		.no-cssvhunit & {
+			height:595px;
+		}
 	}
 }
 .about-header-text {
@@ -20,6 +26,9 @@ header.about-header {
 	color:white;
 	z-index:-1;
 	font-size:0.5em;
+	.no-cssvhunit & {
+		top:250px;
+	}
 	h1 {
 		font-size:7em;
 		margin:0;
