--- a/app/less/pages/home/home-header.less
+++ b/app/less/pages/home/home-header.less
@@ -24,10 +24,16 @@ header.home-header {
 	width:100%;
 	height:100vh;
 	z-index:-100;
+	.no-cssvhunit & {
+		height:595px;
+	}
 	.home-header-bg {
 		background-color:@home-header-bg-color;
 		width:100vw;
 		height:100vh;
+		.no-cssvhunit & {
+			height:595px;
+		}
 	}
 	.header-img {
 		width:100vw;
@@ -36,12 +42,18 @@ header.home-header {
 		position:fixed;
 		top:0;
 		left:0;
+		.no-cssvhunit & {
+			height:595px;
+		}
 	}
 }
 .header-text-and-logo {
 	width:100%;
 	top:25vh;
 	z-index:-2;
+	.no-cssvhunit & {
+		top:150px;
+	}
 	.svg-icon {
 		display: inline-block;
 		position: relative;
@@ -107,6 +119,9 @@ header.home-header {
 	transition: height 0.3s;
 	cursor:pointer;
 	cursor:hand;
+	.no-cssvhunit & {
+		display:none;
+	}
 	&:hover {
 		height:1.5rem;
 		.semi-circle {
@@ -155,4 +170,7 @@ header.home-header {
 	//position:relative;
 	//background:red;
 	//z-index:-101;
+	.no-cssvhunit & {
+		height:595px;
+	}
 }
