--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2086,10 +2086,16 @@ header.home-header {
   height: 100vh;
   z-index: -100;
 }
+.no-cssvhunit header.home-header {
+  height: 595px;
+}
 header.home-header .home-header-bg {
   background-color: rgba(231, 76, 60, 0.93);
   width: 100vw;
   height: 100vh;
+}
+.no-cssvhunit header.home-header .home-header-bg {
+  height: 595px;
 }
 header.home-header .header-img {
   width: 100vw;
@@ -2099,10 +2105,16 @@ header.home-header .header-img {
   top: 0;
   left: 0;
 }
+.no-cssvhunit header.home-header .header-img {
+  height: 595px;
+}
 .header-text-and-logo {
   width: 100%;
   top: 25vh;
   z-index: -2;
+}
+.no-cssvhunit .header-text-and-logo {
+  top: 150px;
 }
 .header-text-and-logo .svg-icon {
   display: inline-block;
@@ -2182,6 +2194,9 @@ header.home-header .header-img {
   cursor: pointer;
   cursor: hand;
 }
+.no-cssvhunit .scroll-down {
+  display: none;
+}
 .scroll-down:hover {
   height: 1.5rem;
 }
@@ -2229,6 +2244,9 @@ header.home-header .header-img {
 }
 .header-spacer {
   height: 100vh;
+}
+.no-cssvhunit .header-spacer {
+  height: 595px;
 }
 section.what-we-do {
   background-color: #ecf0f1;
@@ -2740,6 +2758,9 @@ header.about-header {
   width: 100%;
   height: 100vh;
 }
+.no-cssvhunit header.about-header {
+  height: 595px;
+}
 header.about-header .about-header-bg {
   position: absolute;
   top: 0;
@@ -2748,12 +2769,18 @@ header.about-header .about-header-bg {
   background: black;
   opacity: 0.4;
 }
+.no-cssvhunit header.about-header .about-header-bg {
+  height: 595px;
+}
 .about-header-text {
   width: 100%;
   top: 40vh;
   color: white;
   z-index: -1;
   font-size: 0.5em;
+}
+.no-cssvhunit .about-header-text {
+  top: 250px;
 }
 .about-header-text h1 {
   font-size: 7em;
