--- a/app/less/pages/home/home-process.less
+++ b/app/less/pages/home/home-process.less
@@ -150,7 +150,7 @@
 	background-size:cover;
 	background-position:center;
 	width:100%;
-	height:100vh;
+	height:500px;
 	position:relative;
 	z-index:103;
 	//padding-left:1rem;
