--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -77,7 +77,7 @@
         background-position:center;
         background-size:cover;
         p {
-            margin-top:-2rem;
+            //margin-top:-2rem;
         }
     }
     & > section:nth-child(7) {
@@ -87,7 +87,7 @@
         background-position:center;
         background-size:cover;
         p {
-            margin-top:-1.5rem;
+            //margin-top:-1.5rem;
         }
     }
     & > section:nth-child(8) {
@@ -97,7 +97,7 @@
         background-position:center;
         background-size:cover;
         p {
-            margin-top:-1.5rem;
+            //margin-top:-1.5rem;
         }
     }
     & > section:nth-child(9) {
@@ -107,7 +107,7 @@
         background-position:center;
         background-size:cover;
         p {
-            margin-top:-2rem;
+            //margin-top:-2rem;
         }
     }
     & > section:nth-child(10) {
@@ -131,7 +131,7 @@
         background-position:center;
         background-size:cover;
         p {
-            margin-top:-2rem;
+            //margin-top:-2rem;
         }
     }
     & > section.wk-expand {
@@ -163,30 +163,11 @@
     height: 100%;
     cursor: pointer;
     opacity: 1;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-pack: center;
-    -moz-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
     -webkit-transition: opacity 0.2s linear 0.5s;
     -moz-transition: opacity 0.2s linear 0.5s;
     transition: opacity 0.2s linear 0.5s;
+    text-align:center;
+    padding:1rem;
     h3, p {
         text-align: center;
         margin: 0;
@@ -207,19 +188,19 @@
         -webkit-transition: all 0.2s ease-in-out;
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
-        margin-top:2rem;
+        //margin-top:2rem;
     }
     h3 {
-        font-size:1.8em;
+        font-size:1.2em;
         text-transform: uppercase;
-        margin-top:-2rem;
+        margin-top:0.5rem;
         line-height:1em;
     }
     p {
         font-size:0.8em;
         color:white;
         font-family:@secondary-font;
-        margin-top:-3rem;
+        margin-top:1rem;
         line-height:16px;
     }
 }
