--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2066,6 +2066,10 @@ footer .flow-opposite {
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99999;
 }
 html,
 body {
@@ -2431,7 +2435,7 @@ section.what-we-do ul.what-we-do-list li {
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 100vh;
+  height: 500px;
   position: relative;
   z-index: 103;
 }
@@ -2687,7 +2691,7 @@ section.home-blocks .block-collaboration .title-and-text button:hover {
     font-size: 1em;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
   .header-text-and-logo .svg-icon {
     width: 50%;
     max-height: 10rem;
@@ -4013,18 +4017,12 @@ section.cs-expand .cs-icon-close {
   background-position: center;
   background-size: cover;
 }
-.wk-main > section:nth-child(6) p {
-  margin-top: -2rem;
-}
 .wk-main > section:nth-child(7) {
   top: 33.3%;
   left: 50%;
   background: url('../images/relo-thumb.jpg');
   background-position: center;
   background-size: cover;
-}
-.wk-main > section:nth-child(7) p {
-  margin-top: -1.5rem;
 }
 .wk-main > section:nth-child(8) {
   top: 33.3%;
@@ -4033,18 +4031,12 @@ section.cs-expand .cs-icon-close {
   background-position: center;
   background-size: cover;
 }
-.wk-main > section:nth-child(8) p {
-  margin-top: -1.5rem;
-}
 .wk-main > section:nth-child(9) {
   top: 66.6%;
   left: 0;
   background: url('../images/flowers-thumb.jpg');
   background-position: center;
   background-size: cover;
-}
-.wk-main > section:nth-child(9) p {
-  margin-top: -2rem;
 }
 .wk-main > section:nth-child(10) {
   top: 66.6%;
@@ -4066,9 +4058,6 @@ section.cs-expand .cs-icon-close {
   background: url('../images/irishtimes-thumb.jpg');
   background-position: center;
   background-size: cover;
-}
-.wk-main > section:nth-child(12) p {
-  margin-top: -2rem;
 }
 .wk-main > section.wk-expand {
   width: 100%;
@@ -4098,30 +4087,11 @@ section.cs-expand .cs-icon-close {
   height: 100%;
   cursor: pointer;
   opacity: 1;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
   -webkit-transition: opacity 0.2s linear 0.5s;
   -moz-transition: opacity 0.2s linear 0.5s;
   transition: opacity 0.2s linear 0.5s;
+  text-align: center;
+  padding: 1rem;
 }
 .wk-box h3,
 .wk-box p {
@@ -4139,19 +4109,18 @@ section.cs-expand .cs-icon-close {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  margin-top: 2rem;
 }
 .wk-box h3 {
-  font-size: 1.8em;
+  font-size: 1.2em;
   text-transform: uppercase;
-  margin-top: -2rem;
+  margin-top: 0.5rem;
   line-height: 1em;
 }
 .wk-box p {
   font-size: 0.8em;
   color: white;
   font-family: 'cabrito_norm_regularnormRg';
-  margin-top: -3rem;
+  margin-top: 1rem;
   line-height: 16px;
 }
 .wk-icon {
