--- a/app/less/pages/about/media-queries-about-team.less
+++ b/app/less/pages/about/media-queries-about-team.less
@@ -1,3 +1,13 @@
+@media screen and (max-width:768px) {
+	section.team {
+		.lightbox {
+			.no-cssvhunit & {
+				height:595px;
+			}
+		}
+	}
+}
+
 @media screen and (min-width: 20rem) {
 	section.team {
 		.lightbox {
@@ -27,9 +37,9 @@
 @media screen and (min-width: 55rem) {
 	section.team {
 		.lightbox {
-			width:80vw;
+			width:80%;
 			z-index:999;
-			top:20vh;
+			top:20%;
 			left:50%;
 			margin-left:-40vw;
 			height:auto;
