--- a/app/less/pages/blog/blog-header.less
+++ b/app/less/pages/blog/blog-header.less
@@ -1,19 +1,23 @@
 header.blog-header {
 	z-index:-1;
-	background:url(../images/blog-header.jpg);
+	background:url('../images/blog-header.jpg');
 	background-size:cover;
 	background-position:center;
-	background-attachment:fixed;
 	width:100%;
 	height:100vh;
+	.no-cssvhunit & {
+		height:595px;
+	}
 	.blog-header-bg {
 		position:absolute;
 		top:0;
 		height:100vh;
 		width:100%;
 		background:black;
-		opacity:0.5;
-		display:none;
+		opacity:0.4;
+		.no-cssvhunit & {
+			height:595px;
+		}
 	}
 }
 .blog-header-text {
@@ -24,6 +28,9 @@ header.blog-header {
 	z-index:-1;
 	font-size:0.5em;
 	z-index:1;
+	.no-cssvhunit & {
+		top:250px;
+	}
 	h1 {
 		font-size:7em;
 		margin:0;
