--- a/app/less/pages/showcase/showcase-work.less
+++ b/app/less/pages/showcase/showcase-work.less
@@ -7,6 +7,10 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    max-height:595px;
+    .no-cssvhunit & {
+        height:595px;
+    }
     h3 {
         color:white;
         font-family:@primary-font-bold;
