removed blog page, some minor responsive styling

--- a/app/less/pages/blog/blog-header.less
+++ b/app/less/pages/blog/blog-header.less
@@ -23,7 +23,7 @@ header.blog-header {
 .blog-header-text {
 	width:100%;
 	position:relative;
-	top:40%;
+	top:40vh;
 	color:white;
 	z-index:-1;
 	font-size:0.5em;
