--- a/app/less/pages/showcase/showcase-case-studies.less
+++ b/app/less/pages/showcase/showcase-case-studies.less
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    max-height:595px;
+    //max-height:595px;
     .no-cssvhunit & {
         height:595px;
     }
