work and case studies section heights for no-cssvhunit

--- a/app/less/pages/showcase/media-queries-showcase-case-studies.less
+++ b/app/less/pages/showcase/media-queries-showcase-case-studies.less
@@ -38,5 +38,8 @@
 @media screen and (min-width: 961px) {
 	.cs-main {
 		max-height:595px;
+		.no-cssvhunit & {
+	        height:595px;
+	    }
 	}
 }
