--- a/app/less/pages/showcase/media-queries-showcase-work.less
+++ b/app/less/pages/showcase/media-queries-showcase-work.less
@@ -177,5 +177,8 @@
 @media screen and (min-width: 961px) {
 	.wk-main {
 		max-height:595px;
+		.no-cssvhunit & {
+	        height:595px;
+	    }
 	}
 }
