--- a/app/less/pages/about/media-queries-about-team.less
+++ b/app/less/pages/about/media-queries-about-team.less
@@ -53,3 +53,14 @@
 		}
 	}
 }
+@media screen and (max-width: 880px) {
+	section.team {
+		.lightbox {
+			.icon-exit {
+				font-size:2.5em;
+				top:1rem;
+				right:1rem;
+			}
+		}
+	}
+}
